small revision to about section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="about">
       <p class="section-label">Introduction</p>
       <p>
-        If you've landed here, it's probably because I handed you a card or pointed you at a QR code. That's intentional. There are only so many times a person can tell the same story, and I'd rather you have the full picture than a fragmented version delivered on a rough day.
+        If you've landed here, it's probably because I pointed you at a QR code or shared a link with you or someone you know. That's intentional. It's a long story and sometimes I get busy and can't tell the story as it deserves. There is also the option that maybe I'm just not in the mood because there are only so many times a person can tell the same story, and I'd rather you have the full picture than a fragmented version delivered on a rough day.
       </p>
       <p>
         This page is a living document. I update it when things change. What you read here is as accurate as I can make it at the time of writing. If you have questions after reading, I'm happy to talk — but at least we'll be starting from the same place.
