omitted entries for my name

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
   <!-- Header -->
   <header>
-    <p class="site-name">Your Name Here</p>
     <h1>This is <em>my story.</em></h1>
-    <p class="subtitle">A plain account of what I've been through, written so I don't have to keep repeating it.</p>
+    <p class="subtitle">A plain account of what I've been through, written because I forget parts when repeating it.</p>
   </header>
 
   <!-- Navigation -->
@@ -39,7 +38,6 @@
       <p>
         This page is a living document. I update it when things change. What you read here is as accurate as I can make it at the time of writing. If you have questions after reading, I'm happy to talk — but at least we'll be starting from the same place.
       </p>
-      <p><em>— [Your Name]</em></p>
     </section>
 
     <!-- Timeline — built from entries.json by main.js -->
@@ -58,7 +56,6 @@
 
   <!-- Footer -->
   <footer>
-    <span>[Your Name]</span>
     <span>Updated as things change.</span>
   </footer>
 
