--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Header -->
   <header>
-    <h1>This is <em>my story.</em></h1>
+    <h1>A Cautionary Tale of <em>Procrastination and Deception.</em></h1>
     <p class="subtitle">A plain account of what I've been through, written because I forget parts when repeating it.</p>
   </header>
 
